--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,7 @@ tr:nth-child(even) td:nth-child(odd), tr:nth-child(odd) td:nth-child(even) {
 }
 
 tr:nth-child(even) td:nth-child(even), tr:nth-child(odd) td:nth-child(odd) {
-  background-color: #CC0000;
+  background-color: #f5f5dc;
 }
 
 div {
