--- a/css/style.css
+++ b/css/style.css
@@ -63,17 +63,17 @@ div {
 }
 
 .red-pawn {
-  background-image: url("/img/red-pawn.png");
+  background-image: url("../img/red-pawn.png");
 }
 
 .red-king {
-  background-image: url("/img/red-king.png");
+  background-image: url("../img/red-king.png");
 }
 
 .black-pawn {
-  background-image: url("/img/black-pawn.png");
+  background-image: url("../img/black-pawn.png");
 }
 
 .black-king {
-  background-image: url("/img/black-king.png");
+  background-image: url("../img/black-king.png");
 }
