--- a/css/style.css
+++ b/css/style.css
@@ -39,10 +39,12 @@ tbody:first-child tr:first-child {
 
 button {
   margin: .5em;
+  box-shadow: -6px 6px 6px rgba(0,0,0,.1);
 }
 
-.activecell {
-  box-shadow: inset 5px 5px 5px white;
+button:active {
+  top: 2px;
+  left: -2px;
 }
 
 div.modal {
@@ -57,7 +59,7 @@ tr:nth-child(even) td:nth-child(odd), tr:nth-child(odd) td:nth-child(even) {
 
 tr:nth-child(even) td:nth-child(even), tr:nth-child(odd) td:nth-child(odd) {
   background-color: #f5f5dc;
-  box-shadow: inset 0 0 10px rgba(0,0,0,.5);
+  box-shadow: inset 0 0 5px rgba(0,0,0,.25);
 }
 
 div {
